# CovertlyControllingChoices

./: AgHelpFun.hs  Aggregation.hs  Manipulation.hs  MoreRules.hs  MyBasics.hs  Quantify.hs  README.md  Rules.hs  SeqMaj.hs  Simone.cabal
