name:          Simone
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.2

library
  ghc-options:      -Wall -fobject-code
  exposed-modules:  Aggregation, Manipulation, Rules, MyBasics, AgHelpFun, MoreRules, SeqMaj, Quantify
  build-depends:    base >= 4.7 && < 5,
                    random, QuickCheck, containers


executable myprogram
  ghc-options:      -Wall
  main-is:          Main.lhs
  build-depends:    base >= 4.7 && < 5
  other-modules:    Aggregation, Manipulation, MoreRules, MyBasics, AgHelpFun, SeqMaj, Quantify,  Rules
